--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  firebase_analytics: ^10.2.0
+  firebase_core: ^2.9.0
+  firebase_database: ^10.1.0
   flutter:
     sdk: flutter
   flutter_markdown: ^0.6.14
