--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  bloc: ^8.1.1
   firebase_analytics: ^10.2.0
   firebase_core: ^2.9.0
   firebase_database: ^10.1.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.2
   flutter_markdown: ^0.6.14
   font_awesome_flutter: ^10.4.0
   go_router: ^6.5.2
