Update gitignore to ignore articles

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ### ------------------------- Flutter.gitignore ------------------------ ###
 ### Source: https://gist.github.com/dileepabandara/43f37affb84650a7e59ff04204c44aa8
 
+#Article
+/articles
+
 # Miscellaneous
 *.class
 #*.lock
