--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.1
+  file_picker: ^5.2.9
   firebase_analytics: ^10.2.0
   firebase_core: ^2.9.0
   firebase_database: ^10.1.0
